[gd_scene load_steps=2 format=3 uid="uid://m32wpmqlif75"]

[ext_resource type="Script" path="res://scenes/ui/upgrade_card.gd" id="1_aill1"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_aill1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "swords"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Doing all kinds of stuff and junk"
autowrap_mode = 3
